# mcp-practice

./: README.md
cli_project/: .gitignore  .pre-commit-config.yaml  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
cli_project/app.egg-info/: PKG-INFO  requires.txt
cli_project/core/: chat.py  claude.py  cli.py  cli_chat.py  tools.py
cli_project/media/: Screen Recording 2025-10-29 at 3.19.38 PM.mov
