[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.51.0",
    "fastmcp>=0.1.0",
    "mcp[cli]>=1.8.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
